# fastapi-jwt-sqlmodel

./: .env  alembic.ini  scaffold_umm.py  setup.cfg
alembic/: env.py
alembic/versions/: 03c85a9a9116_add_refresh_tokens_table.py  0ed9aa63a156_create_item_table.py  343c991ac353_user_management_module.py  3455961c8104_add_user_roles.py  88f6b4c2cbab_baseline.py  aecea27efcf4_add_status_to_item.py  db902ea3b889_add_roles_and_user_role_link.py  f0d1c444d4bb_add_user_and_item_owner.py
app/: crud.py  db.py  main.py  models.py  schemas.py
app/api/: api.py  deps.py
app/api/routes/: admin.py  auth.py  items.py  roles.py  users.py
app/core/: config.py  security.py
app/services/: email_service.py
fastapi_backend.egg-info/: SOURCES.txt  requires.txt
scripts/: assign_role.py  create_superuser.py
tests/: conftest.py  test_auth_refresh.py
