[metadata]
name = fastapi-backend
version = 0.1.0
description = FastAPI + JWT + Alembic
author = Your Name

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    fastapi
    uvicorn
    sqlmodel
    sqlalchemy
    passlib
    python-jose
    alembic

[options.packages.find]
where = .
